--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1> GAROTA DO BLOG</h1>   
+<p>Descubra os segredos mais quentes a as intrigas mais picantes,o seu portal para o mundo das fofocas</p>
 <img src="imagem1.jpg">
 
 </body>
